--- a/index.html
+++ b/index.html
@@ -4,158 +4,162 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
-<body class="slide-in">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-2 sidebar">
-        <div class="logo-section">
-          <img src="img/logo.png" alt="BABA Logo" class="logo">
+<body>
+  <div class="sidebar">
+    <div class="logo-section">
+      <img src="/fend/img/logo.png" alt="Logo" class="logo">
+    </div>
+    <div class="menu-links">
+      <a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+      <a href="inventory.html"><i class="fas fa-archive"></i> Inventory</a>
+      <a href="sales.html"><i class="fas fa-cash-register"></i> POS</a>
+      <a href="#"><i class="fas fa-file-invoice"></i> Sales Report</a>
+      <a href="#"><i class="fas fa-user-cog"></i> Account</a>
+    </div>
+    <div class="bottom-links">
+      <a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
+    </div>
+  </div>
+
+  <div class="wrapper">
+    <div class="content">
+      <!-- Main Title -->
+      <h1 class="dashboard-title">DASHBOARD</h1>
+
+      <!-- Dashboard Cards -->
+      <div class="dashboard-cards">
+        <div class="card">
+          <div class="card-header"><i class="fas fa-th-large"></i> Category</div>
+          <div class="card-body">10</div>
         </div>
-        <div class="menu-links">
-          <a href="index.html">Dashboard</a>
-          <a href="inventory.html">Inventory</a>
-          <a href="sales.html">Sales Report</a>
+        <div class="card">
+          <div class="card-header"><i class="fas fa-cogs"></i> Products</div>
+          <div class="card-body">150</div>
         </div>
-        <div class="bottom-links">
-          <a href="#">Account</a>
-          <a href="#">Logout</a>
+        <div class="card">
+          <div class="card-header"><i class="fas fa-calendar-alt"></i> Monthly Sales</div>
+          <div class="card-body">$20,000</div>
         </div>
       </div>
-      <div class="col-lg-10 p-4">
-        <h2>Dashboard</h2>
-        <div class="row dashboard-card mt-4">
-          <div class="col-lg-3">
-            <div class="card bg-light">
-              <img src="img/category.png" class="card-img-center" alt="..." style="width: 55px;height: 35px; margin: 0 auto 0 auto;">
-              <div class="card-header text-center">Category</div>
-              <div class="card-body text-center">01</div>
-            </div>
+
+      <!-- Tables -->
+      <div class="tables">
+        <!-- Top Selling Products Table -->
+        <div class="table-container">
+          <div class="table-header">
+            <h2>Top Selling Products</h2>
+            <select class="filter-category">
+              <option value="all">All Categories</option>
+              <option value="category1">Category 1</option>
+              <option value="category2">Category 2</option>
+              <option value="category3">Category 3</option>
+            </select>
           </div>
-          <div class="col-lg-3">
-            <div class="card bg-light">
-                <img src="img/product.png" class="card-img-center" alt="..." style="width: 55px;height: 35px; margin: 0 auto 0 auto;">
-              <div class="card-header text-center">Products</div>
-              <div class="card-body text-center">50</div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card bg-light">
-                <img src="img/ssales.png" class="card-img-center" alt="..." style="width: 55px;height: 35px; margin: 0 auto 0 auto;">
-              <div class="card-header text-center">Monthly Sales</div>
-              <div class="card-body text-center">PHP 1,000.00</div>
-            </div>
-          </div>
+          <table class="table top-selling">
+            <thead>
+              <tr>
+                <th>Product</th>
+                <th>Category</th>
+                <th>Total Sold</th>
+                <th>Revenue</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Product 1</td>
+                <td>Category 1</td>
+                <td>100</td>
+                <td>$500</td>
+              </tr>
+              <tr>
+                <td>Product 2</td>
+                <td>Category 2</td>
+                <td>90</td>
+                <td>$450</td>
+              </tr>
+              <tr>
+                <td>Product 3</td>
+                <td>Category 1</td>
+                <td>80</td>
+                <td>$400</td>
+              </tr>
+              <tr>
+                <td>Product 4</td>
+                <td>Category 3</td>
+                <td>70</td>
+                <td>$350</td>
+              </tr>
+              <tr>
+                <td>Product 5</td>
+                <td>Category 2</td>
+                <td>60</td>
+                <td>$300</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
 
-        <div class="row">
-          <div class="col-6 border bg-light border rounded mt-4">
-            <h4>Top-Selling Products</h4>
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Product</th>
-                  <th>Total Sold</th>
-                  <th>Revenue Generated</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Light Bulb</td>
-                  <td>22</td>
-                  <td>22</td>
-                </tr>
-                <tr>
-                  <td>PVC Blue Pipe</td>
-                  <td>08</td>
-                  <td>08</td>
-                </tr>
-                <tr>
-                  <td>PVC Blue Pipe</td>
-                  <td>08</td>
-                  <td>08</td>
-                </tr>
-                <tr>
-                  <td>PVC Blue Pipe</td>
-                  <td>08</td>
-                  <td>08</td>
-                </tr>
-                <tr>
-                  <td>PVC Blue Pipe</td>
-                  <td>08</td>
-                  <td>08</td>
-                </tr>
-
-                <tr>
-                    <td>PVC Blue Pipe</td>
-                    <td>08</td>
-                    <td>08</td>
-                </tr>
-                <tr>
-                    <td>PVC Blue Pipe</td>
-                    <td>08</td>
-                    <td>08</td>
-                </tr>
-              </tbody>
-            </table>
+        <!-- Low Stock Alert Table -->
+        <div class="table-container">
+          <div class="table-header">
+            <h2>Low Stock Alert</h2>
+            <select class="filter-category">
+              <option value="all">All Categories</option>
+              <option value="category1">Category 1</option>
+              <option value="category2">Category 2</option>
+              <option value="category3">Category 3</option>
+            </select>
           </div>
-          
-          <div class="col-6 border bg-light border rounded mt-4">
-            <h4>Low Stock Alert</h4>
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Product</th>
-                  <th>Stock Left</th>
-                  <th>Status</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Light Bulb</td>
-                  <td>22</td>
-                  <td>Reorder Now</td>
-                </tr>
-                <tr>
-                  <td>PVC Blue Pipe</td>
-                  <td>08</td>
-                  <td>Reorder Now</td>
-                </tr>
-                <tr>
-                  <td>PVC Blue Pipe</td>
-                  <td>08</td>
-                  <td>Sufficient</td>
-                </tr>
-                <tr>
-                  <td>PVC Blue Pipe</td>
-                  <td>08</td>
-                  <td>Reorder Now</td>
-                </tr>
-                <tr>
-                  <td>PVC Blue Pipe</td>
-                  <td>08</td>
-                  <td>Sufficient</td>
-                </tr>
-                <tr>
-                    <td>PVC Blue Pipe</td>
-                    <td>08</td>
-                    <td>Reorder Now</td>
-                </tr>
-                <tr>
-                    <td>PVC Blue Pipe</td>
-                    <td>08</td>
-                    <td>Sufficient</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+          <table class="table low-stock">
+            <thead>
+              <tr>
+                <th>Product</th>
+                <th>Category</th>
+                <th>Stock Remaining</th>
+                <th>Restock Needed</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Product 1</td>
+                <td>Category 1</td>
+                <td>10</td>
+                <td>Yes</td>
+              </tr>
+              <tr>
+                <td>Product 2</td>
+                <td>Category 2</td>
+                <td>5</td>
+                <td>Yes</td>
+              </tr>
+              <tr>
+                <td>Product 3</td>
+                <td>Category 1</td>
+                <td>3</td>
+                <td>Yes</td>
+              </tr>
+              <tr>
+                <td>Product 4</td>
+                <td>Category 3</td>
+                <td>8</td>
+                <td>No</td>
+              </tr>
+              <tr>
+                <td>Product 5</td>
+                <td>Category 2</td>
+                <td>4</td>
+                <td>Yes</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
   </div>
-  <script src="index.js"></script>  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script src="scripts.js"></script>
 </body>
 </html>
