--- a/inventory.html
+++ b/inventory.html
@@ -9,21 +9,21 @@
 </head>
 <body>
   <!-- Sidebar -->
-  <div class="sidebar">
-    <div class="logo-section">
-      <img src="/fend/img/logo.png" alt="Logo" class="logo">
+    <div class="sidebar">
+      <div class="logo-section">
+        <img src="img/logo.png" alt="Logo" class="logo">
+      </div>
+      <div class="menu-links">
+        <a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+        <a href="inventory.html"><i class="fas fa-archive"></i> Inventory</a>
+        <a href="POS.html"><i class="fas fa-cash-register"></i> Point of Sales</a>
+        <a href="salesreport.html"><i class="fas fa-file-invoice"></i> Sales Report</a>
+        <a href="account.html"><i class="fas fa-user-cog"></i> Account</a>
+      </div>
+      <div class="bottom-links">
+        <a href="login.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
+      </div>
     </div>
-    <div class="menu-links">
-      <a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-      <a href="inventory.html"><i class="fas fa-archive"></i> Inventory</a>
-      <a href="sales.html"><i class="fas fa-cash-register"></i> POS</a>
-      <a href="#"><i class="fas fa-file-invoice"></i> Sales Report</a>
-      <a href="#"><i class="fas fa-user-cog"></i> Account</a>
-    </div>
-    <div class="bottom-links">
-      <a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
-    </div>
-  </div>
 
   <!-- Wrapper (Content Area) -->
   <div class="wrapper">
