--- a/log.html
+++ b/log.html
@@ -13,7 +13,7 @@
         <!-- Welcome message occupies 2/4 of the screen -->
         <div class="welcome-message col-12 col-md-6 d-flex align-items-center justify-content-center flex-column p-5">
             <!-- Logo added above the welcome message -->
-            <img src="/fend/img/logo.png" alt="BABA Hardware Store Logo" class="logo mb-4">
+            <img src="img/logo.png" alt="BABA Hardware Store Logo" class="logo mb-4">
             <h1 class="text-white text-center">
                 Welcome to <br> BABA's Hardware Store <br> Inventory System
             </h1>
