--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="sidebar">
-    <div class="logo-section">
-      <img src="/fend/img/logo.png" alt="Logo" class="logo">
+  <!-- Sidebar -->
+    <div class="sidebar">
+      <div class="logo-section">
+        <img src="img/logo.png" alt="Logo" class="logo">
+      </div>
+      <div class="menu-links">
+        <a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+        <a href="inventory.html"><i class="fas fa-archive"></i> Inventory</a>
+        <a href="POS.html"><i class="fas fa-cash-register"></i> Point of Sales</a>
+        <a href="salesreport.html"><i class="fas fa-file-invoice"></i> Sales Report</a>
+        <a href="account.html"><i class="fas fa-user-cog"></i> Account</a>
+      </div>
+      <div class="bottom-links">
+        <a href="login.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
+      </div>
     </div>
-    <div class="menu-links">
-      <a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-      <a href="inventory.html"><i class="fas fa-archive"></i> Inventory</a>
-      <a href="sales.html"><i class="fas fa-cash-register"></i> POS</a>
-      <a href="#"><i class="fas fa-file-invoice"></i> Sales Report</a>
-      <a href="#"><i class="fas fa-user-cog"></i> Account</a>
-    </div>
-    <div class="bottom-links">
-      <a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
-    </div>
-  </div>
 
   <div class="wrapper">
     <div class="content">
