--- a/login.html
+++ b/login.html
@@ -25,6 +25,10 @@
                     
                     <button type="submit"><a href="index.html" style="display: block; color: white; text-decoration: none;"> Sign in</a></button>
                 </form>
+                <div class="text-center mt-4">
+                    <p><a href="signup.html" class="text-decoration-none text-danger">Or Sign up</a></p>
+                    <p><a href="forgot-password.html" class="text-decoration-none text-muted">Forgot password?</a></p>
+                </div>
             </div>
         </div>
     </div>
