--- a/inventory.html
+++ b/inventory.html
@@ -30,25 +30,22 @@
   <div class="wrapper">
     <h1>INVENTORY</h1>
 
-    <!-- Search Bar and Filter Options -->
-    <div class="filters">
-      <input type="text" id="searchInput" placeholder="Search by name or ID..." class="search-bar">
-      <div class="filter-options">
-        <select id="categoryFilter">
+    <!-- Search Bar, Filter Options, and Add Button -->
+    <div class="filters d-flex align-items-center justify-content-between">
+      <div class="filter-inputs d-flex align-items-center">
+        <input type="text" id="searchInput" placeholder="Search by name or ID..." class="search-bar me-2">
+        <select id="categoryFilter" class="form-select me-2">
           <option value="all">All Categories</option>
           <option value="Plumbing Supply">Plumbing Supply</option>
-          <option value="apparel">Electrical Supplies</option>
+          <option value="Electrical Supplies">Electrical Supplies</option>
         </select>
-        <select id="statusFilter">
+        <select id="statusFilter" class="form-select me-2">
           <option value="all">All Status</option>
           <option value="inStock">In Stock</option>
           <option value="lowStock">Low Stock</option>
           <option value="outOfStock">Out of Stock</option>
         </select>
       </div>
-    </div>
-
-    <div class="action-buttons">
       <button id="addProductBtn" class="btn btn-primary">Add New Product</button>
     </div>
 
@@ -68,7 +65,6 @@
           </tr>
         </thead>
         <tbody>
-         
           <tr data-status="inStock">
             <td>Wireless Mouse</td>
             <td>001</td>
@@ -82,7 +78,6 @@
               <button class="btn btn-danger btn-sm delete-btn">Delete</button>
             </td>
           </tr>
-          <!-- Add more rows as needed -->
         </tbody>
       </table>
     </div>
@@ -98,33 +93,55 @@
         </div>
         <div class="modal-body">
           <form id="addItemForm">
-              <div class="mb-3">
-                  <label for="productName" class="form-label">Product Name</label>
-                  <input type="text" class="form-control" id="productName" required>
-              </div>
-              <div class="mb-3">
-                  <label for="category" class="form-label">Category</label>
-                  <select class="form-select" id="category" required>
-                      <option value="Tools">Tools</option>
-                      <option value="Plumbing Supply">Plumbing Supply</option>
-                      <option value="Electrical Supplies">Electrical Supplies</option>
-                  </select>
-              </div>
-              <div class="mb-3">
-                  <label for="stock" class="form-label">Stock Quantity</label>
-                  <input type="number" class="form-control" id="stock" min="1" required>
-              </div>
-              <div class="mb-3">
-                  <label for="threshold" class="form-label">Threshold/Min Stock</label>
-                  <input type="number" class="form-control" id="threshold" min="1" required>
-              </div>
-              <button type="submit" class="btn btn-primary">Save Item</button>
+            <div class="mb-3">
+              <label for="productName" class="form-label">Product Name</label>
+              <input type="text" class="form-control" id="productName" required>
+            </div>
+            <div class="mb-3">
+              <label for="category" class="form-label">Category</label>
+              <select class="form-select" id="category" required>
+                <option value="Tools">Tools</option>
+                <option value="Plumbing Supply">Plumbing Supply</option>
+                <option value="Electrical Supplies">Electrical Supplies</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="stock" class="form-label">Stock Quantity</label>
+              <input type="number" class="form-control" id="stock" min="1" required>
+            </div>
+            <div class="mb-3">
+              <label for="threshold" class="form-label">Threshold/Min Stock</label>
+              <input type="number" class="form-control" id="threshold" min="1" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Save Item</button>
           </form>
-      </div>
+        </div>
       </div>
     </div>
   </div>
 
+  <!-- Modal for Restock Form -->
+  <div class="modal fade" id="restockModal" tabindex="-1" aria-labelledby="restockModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="restockModalLabel">Restock Product</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form id="restockForm">
+            <div class="mb-3">
+              <label for="restockAmount" class="form-label">Restock Amount</label>
+              <input type="number" class="form-control" id="restockAmount" min="1" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Restock</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- JavaScript -->
   <script src="inventory.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
