--- a/inventory.html
+++ b/inventory.html
@@ -110,7 +110,7 @@
               <input type="number" class="form-control" id="stock" min="1" required>
             </div>
             <div class="mb-3">
-              <label for="threshold" class="form-label">Threshold/Min Stock</label>
+              <label for="threshold" class="form-label">Threshold/Min Stocks</label>
               <input type="number" class="form-control" id="threshold" min="1" required>
             </div>
             <button type="submit" class="btn btn-primary">Save Item</button>
