--- a/backend/public/inventory.html
+++ b/backend/public/inventory.html
@@ -71,7 +71,7 @@
         <tbody>
           <!-- Example Product Rows (can be dynamically populated) -->
           <tr data-status="inStock">
-            <td>Wireless Mouse</td>
+            <td>Wireless Bulb</td>
             <td>001</td>
             <td>Electronics</td>
             <td>100</td>
