--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="card">
           <div class="card-header"><i class="fas fa-calendar-alt"></i> Monthly Sales</div>
-          <div class="card-body">$20,000</div>
+          <div class="card-body">20,000</div>
         </div>
       </div>
 
