--- a/salesreport.html
+++ b/salesreport.html
@@ -50,64 +50,29 @@
                     <div class="table-responsive table-container">
                         <table class="table table-bordered border border-1 border-dark border rounded">
                             <thead class="table-light border border-1 border-dark border rounded">
-                                <tr>
-                                    <th>Product Name</th>
-                                    <th>Product ID</th>
-                                    <th>Product Sold</th>
-                                    <th>Date</th>
-                                </tr>
+                              <tr>
+                                <th>Product Name</th>
+                                <th>Product ID</th>
+                                <th>Category</th>
+                                <th>Quantity</th> 
+                                <th>Total</th>
+                                <th>Date</th>
+                              </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>PVC Weatherproof Socket</td>
-                                    <td>2485855848598</td>
-                                    <td>28</td>
-                                    <td>Aug 27, 2024</td>
-                                </tr>
-                                <tr>
-                                    <td>Receptacle</td>
-                                    <td>2485855848577</td>
-                                    <td>12</td>
-                                    <td>Aug 27, 2024</td>
-                                </tr>
-                                <tr>
-                                    <td>Electrical Tape</td>
-                                    <td>2485855848599</td>
-                                    <td>25</td>
-                                    <td>Aug 27, 2024</td>
-                                </tr>
-                                <tr>
-                                    <td>Screw Adaptor</td>
-                                    <td>2485855848568</td>
-                                    <td>45</td>
-                                    <td>Aug 27, 2024</td>
-                                </tr>
-                                <tr>
-                                    <td>PVC Ball Valve</td>
-                                    <td>2485855848567</td>
-                                    <td>13</td>
-                                    <td>Aug 27, 2024</td>
-                                </tr>
-                                <tr>
-                                    <td>Teplon</td>
-                                    <td>2485855848544</td>
-                                    <td>18</td>
-                                    <td>Aug 27, 2024</td>
-                                </tr>
-                                <tr>
-                                    <td>Teplon</td>
-                                    <td>2485855848544</td>
-                                    <td>18</td>
-                                    <td>Aug 27, 2024</td>
-                                </tr>
                             </tbody>
-                        </table>
+                          </table>
+
+                                <div>
+                                <strong>Total Sales: </strong><span id="total-sales">0.00</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
 
+    <script src="salesreport.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
