--- a/POS.html
+++ b/POS.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Purchase Order</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="POS.css"> <!-- Link to the external CSS -->
+  <link rel="stylesheet" href="POS.css"> 
 </head>
 <body>
   <!-- Sidebar -->
@@ -37,17 +37,30 @@
         <h2>Add Item to Order List</h2>
         <form id="add-item-form">
           <div class="item-row">
-            <label for="item-name">Item Name</label>
-            <input type="text" id="item-name" placeholder="Enter item name" required>
+            <label for="item-name">Product Name</label>
+            <select id="item-name" required>
+              <option value="" disabled selected>Select a product</option>
+              <option value="Wireless Mouse" data-price="">PWireless Mouse</option>
+              <option value="Tape" data-price="">Tape</option>
+              <option value="Screw" data-price="">Screw</option>
+            </select>
           </div>
+
           <div class="item-row">
             <label for="unit-price">Unit Price</label>
-            <input type="number" id="unit-price" placeholder="Enter unit price" required>
+            <input type="number" id="unit-price" required>
+            <div id="unit-price-dropdown" class="dropdown">
+              <button type="button" id="unit-price-dropdown-btn"></button>
+              <div id="unit-price-options" class="dropdown-content">
+              </div>
+            </div>
           </div>
+
           <div class="item-row">
             <label for="quantity">Quantity</label>
-            <input type="number" id="quantity" placeholder="Enter quantity" required>
+            <input type="number" id="quantity" required>
           </div>
+
           <button type="submit" class="submit">Add to List</button>
         </form>
       </div>
@@ -69,6 +82,8 @@
         <tbody id="order-body"></tbody>
       </table>
       <p class="order-total">Total Order Amount: <span id="total-amount">0.00</span></p>
+
+      <button id="confirm-order" class="btn-confirm">Confirm</button>
     </div>
   </div>
 
