--- a/salesreport.html
+++ b/salesreport.html
@@ -9,68 +9,58 @@
     <link rel="stylesheet" href="salesreport.css">
 </head>
 <body class="slide-in">
-    <div class="container-fluid">
-        <div class="row">
-            <body>
-                  <div class="sidebar">
-                    <div class="logo-section">
-                      <img src="img/logo.png" alt="Logo" class="logo">
-                    </div>
-                    <div class="menu-links">
-                      <a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-                      <a href="inventory.html"><i class="fas fa-archive"></i> Inventory</a>
-                      <a href="POS.html"><i class="fas fa-cash-register"></i> Point of Sales</a>
-                      <a href="salesreport.html"><i class="fas fa-file-invoice"></i> Sales Report</a>
-                      <a href="account.html"><i class="fas fa-user-cog"></i> Account</a>
-                    </div>
-                    <div class="bottom-links">
-                      <a href="login.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
-                    </div>
-                  </div>
+    <div class="sidebar">
+        <div class="logo-section">
+            <img src="img/logo.png" alt="Logo" class="logo">
+        </div>
+        <div class="menu-links">
+            <a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+            <a href="inventory.html"><i class="fas fa-archive"></i> Inventory</a>
+            <a href="POS.html"><i class="fas fa-cash-register"></i> Point of Sales</a>
+            <a href="salesreport.html"><i class="fas fa-file-invoice"></i> Sales Report</a>
+            <a href="account.html"><i class="fas fa-user-cog"></i> Account</a>
+        </div>
+        <div class="bottom-links">
+            <a href="login.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
+        </div>
+    </div>
 
-            <div class="wrapper">
-                <div class="content">
-            <div class="col-md-10">
-                <div class="content border border-3 border-light border rounded">
-                    <h1>Sales Report</h1>
-                    <p>Sales related report of the hardware store.</p>
-                
-                    <div class="row mb-3">
-                        <div class="col-md-4">
-                            <label for="dateRange" class="form-label fw-bold">Date Range</label>
-                            <input type="text" id="dateRange" class="form-control border border-1 border-dark border rounded" value="01 December 2021 - 31 December 2021" readonly>
-                        </div>
-                        <div class="col-md-4">
-                            <label for="category" class="form-label fw-bold">Category</label>
-                            <select id="category" class="form-select border border-1 border-dark border rounded">
-                                <option selected>- Select Category -</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="table-responsive table-container">
-                        <table class="table table-bordered border border-1 border-dark border rounded">
-                            <thead class="table-light border border-1 border-dark border rounded">
-                              <tr>
-                                <th>Product Name</th>
-                                <th>Product ID</th>
-                                <th>Category</th>
-                                <th>Quantity</th> 
-                                <th>Total</th>
-                                <th>Date</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                          </table>
-
-                                <div>
-                                <strong>Total Sales: </strong><span id="total-sales">0.00</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <div id="salesReportSection">
+        <h1>Sales Report</h1>
+        <p>Sales related report of the hardware store.</p>
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <label for="dateRange" class="form-label fw-bold">Date Range</label>
+                <input type="text" id="dateRange" class="form-control border border-1 border-dark border rounded" value="01 December 2021 - 31 December 2021" readonly>
             </div>
+            <div class="col-md-4">
+                <label for="category" class="form-label fw-bold">Category</label>
+                <select id="category" class="form-select border border-1 border-dark border rounded">
+                    <option selected>- Select Category -</option>
+                </select>
+            </div>
+        </div>
+        <div class="table-responsive table-container">
+            <table class="table table-bordered border border-1 border-dark border rounded">
+                <thead class="table-light border border-1 border-dark border rounded">
+                    <tr>
+                        <th>Product Name</th>
+                        <th>Product ID</th>
+                        <th>Category</th>
+                        <th>Quantity</th> 
+                        <th>Total</th>
+                        <th>Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                   
+                </tbody>
+            </table>
+            <div>
+                <strong>Total Sales: </strong><span id="total-sales">0.00</span>
+            </div>
+        </div>
+    </div>
 
     <script src="salesreport.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
