--- a/backend/public/inventory.html
+++ b/backend/public/inventory.html
@@ -37,11 +37,11 @@
         <select id="categoryFilter" class="form-select me-2">
           <option value="all">All Categories</option>
         </select>
-        <select id="statusFilter" class="form-select me-2">
+        <select id="statusFilter">
           <option value="all">All Status</option>
-          <option value="inStock">In Stock</option>
-          <option value="lowStock">Low Stock</option>
-          <option value="outOfStock">Out of Stock</option>
+          <option value="In Stock">In Stock</option>
+          <option value="Low Stock">Low Stock</option>
+          <option value="Out of Stock">Out of Stock</option>
         </select>
       </div>
       <button id="addProductBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addItemModal">Add New Product</button>
