--- a/backend/public/POS.html
+++ b/backend/public/POS.html
@@ -31,32 +31,39 @@
     <button id="open-modal" class="btn">Add to List</button>
 
     <!-- Modal -->
-    <div id="modal" class="modal">
+    <div id="modal" class="modal" style="display: none;">
       <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Add Item to Order List</h2>
-        <form id="addItemForm">
-          <label for="category">Category</label>
-          <select id="category" required>
-            <option value="">Select a category</option>
-            <option value="Halogen bulbs">Halogen bulbs</option>
-            <option value="LED bulbs">LED bulbs</option>
-            <option value="Fluorescent bulbs">Fluorescent bulbs</option>
-            <option value="Metal Halide bulbs">Metal Halide bulbs</option>
-            <option value="Xenon bulbs">Xenon bulbs</option>
-            <option value="High Pressure Sodium bulbs">High Pressure Sodium bulbs</option>
-            <option value="Low Pressure Sodium bulbs">Low Pressure Sodium bulbs</option>
-            <option value="Induction lamps">Induction lamps</option>
-            <option value="Neon bulbs">Neon bulbs</option>
-          </select>
+        <form id="add-item-form">
+          <div class="item-row">
+            <label for="item-name">Product Name</label>
+            <select id="item-name" required>
+              <option value="" disabled selected>Select a product</option>
+            </select>
+          </div>
 
-          <label for="unit-price">Unit Price</label>
-          <input type="number" id="unit-price" placeholder="Unit Price" step="0.01" required />
+          <div class="item-row">
+            <label for="category">Category</label>
+            <select id="category" required>
+              <option value="" disabled selected>Select a category</option>
+              <option value="Tools">Tools</option>
+              <option value="Plumbing Supply">Plumbing Supply</option>
+              <option value="Electrical Supplies">Electrical Supplies</option>
+            </select>
+          </div>
 
-          <label for="quantity">Quantity</label>
-          <input type="number" id="quantity" placeholder="Quantity" required />
-          
-          <button type="submit">Add to Order</button>
+          <div class="item-row">
+            <label for="unit-price">Unit Price</label>
+            <input type="number" id="unit-price" required>
+          </div>
+
+          <div class="item-row">
+            <label for="quantity">Quantity</label>
+            <input type="number" id="quantity" required min="1">
+          </div>
+
+          <button type="submit" class="submit">Add to List</button>
         </form>
       </div>
     </div>
@@ -69,6 +76,7 @@
           <tr>
             <th>Item</th>
             <th>Unit Price</th>
+            <th>Category</th>
             <th>Quantity</th>
             <th>Total</th>
             <th>Actions</th>
@@ -78,11 +86,10 @@
       </table>
       <p class="order-total">Total Order Amount: <span id="total-amount">0.00</span></p>
 
-      <button id="confirm-order" class="btn-confirm">Confirm</button>
+      <button id="confirm-order" class="btn btn-primary">Confirm Sale</button>
     </div>
   </div>
 
-  <!-- Link to External JS File -->
   <script src="POS.js"></script>
 </body>
 </html>
