--- a/backend/public/dashboard.html
+++ b/backend/public/dashboard.html
@@ -23,7 +23,7 @@
         <a href="account.html"><i class="fas fa-user-cog"></i> Account</a>
       </div>
       <div class="bottom-links">
-        <a href="login.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
+        <a href="log.html" id="logoutLink"><i class="fas fa-sign-out-alt"></i> Logout</a>
       </div>
     </div>
 
@@ -124,5 +124,6 @@
   </div>
 
   <script src="dashboard.js"></script>
+  <script src="logout.js"></script>
 </body>
 </html>
