--- a/backend/public/inventory.html
+++ b/backend/public/inventory.html
@@ -22,7 +22,7 @@
       <a href="account.html"><i class="fas fa-user-cog"></i> Account</a>
     </div>
     <div class="bottom-links">
-      <a href="login.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
+      <a href="log.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
     </div>
   </div>
 
