--- a/backend/public/inventory.html
+++ b/backend/public/inventory.html
@@ -69,6 +69,14 @@
     </div>
   </div>
 
+  <!-- Pagination Controls -->
+  <div id="pagination" class="pagination justify-content-center mt-3">
+  <nav aria-label="Page navigation">
+    <ul id="pagination" class="pagination"></ul>
+  </nav>
+</div>
+
+
   <!-- Modal for Add New Product Form -->
   <div class="modal fade" id="addItemModal" tabdashboard="-1" aria-labelledby="addItemModalLabel" aria-hidden="true">
     <div class="modal-dialog">
